[package]
name = "rest-actix-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio-postgres = "0.7.5"
tokio = "1.17.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"